# vibe4trading

./: .gitignore  CONTRIBUTING.md  CRYPTO_BENCHMARK_SPEC.md  README.md  VIBE4TRADING_PRODUCT_ARCH_STACK.md  download_freqtrade_data.sh  ideas.md  load_all_freqtrade_datasets.py  prompt_lookback_chart.html  summary_prompt.md  test_freqtrade_import.py  todo.md  verify_freqtrade_data.py
first-claw-eater-backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
first-claw-eater-backend/migrations/: env.py  script.py.mako
first-claw-eater-backend/scripts/: smoke_e2e.py
first-claw-eater-backend/tests/: conftest.py  test_dataset_import_sources.py  test_demo_determinism.py  test_event_store_dedupe.py  test_llm_gateway_errors.py  test_prompt_template_vars.py  test_replay_ordering.py  test_replay_run_smoke.py  test_sim_engine.py
vibe4trading-backend/: .dockerignore  .env.example  ARCHITECTURE.md  DATA_IMPORT_GUIDE.md  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
vibe4trading-backend/alembic/: env.py
vibe4trading-backend/data-loader/: backfill_sentiment_summaries.py  download_binance.py  download_ccxt.py  download_events.py  download_events_auto.py  events.json  import_direct.py  import_events.py  import_sentiment.py  merge_and_import.py  test_merge.py  update_scoring_periods.py
vibe4trading-backend/scripts/: smoke_e2e.py
vibe4trading-backend/tests/: conftest.py  test_api_arena_routes.py  test_api_datasets_routes.py  test_api_live_routes.py  test_api_me_route.py  test_api_models_routes.py  test_api_removed_risk_fields.py  test_api_runs_routes.py  test_arena_benchmark_submission.py  test_arena_env_dataset_set.py  test_arena_metrics.py  test_arena_reporting.py  test_arena_submission_concurrency.py  test_arena_submission_smoke.py  test_auth_oidc.py  test_auth_quota.py  test_auth_tokens.py  test_benchmark_sim.py  test_contracts_events.py  test_contracts_ids.py  test_contracts_numbers.py  test_dataset_import_sources.py  test_db_models.py  test_demo_determinism.py  test_e2e_arena_btc_env_model.py  test_e2e_replay_llm_data.py  test_e2e_tournament_env_llm.py  test_event_store_dedupe.py  test_ingest_demo.py  test_job_worker_retry_semantics.py  test_llm_gateway.py  test_llm_gateway_errors.py  test_llm_gateway_retry_config.py  test_llm_gateway_retry_on_parse_error.py  test_llm_gateway_schema.py  test_llm_gateway_schema_v2.py  test_llm_gateway_schema_validation.py  test_llm_retry.py  (+16 more)
(+309 files in other folders)
