[project]
name = "first-claw-eater-backend"
version = "0.1.0"
description = "First Claw Eater backend (internal pipeline modular monolith)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "psycopg[binary]>=3.2.6",
  "pydantic>=2.7.4",
  "pydantic-settings>=2.4.0",
  "pystache>=0.6.5",
  "sqlalchemy>=2.0.31",
  "structlog>=24.4.0",
  "tenacity>=8.5.0",
  "uvicorn[standard]>=0.30.6",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fce"]

[dependency-groups]
dev = [
  "pyright>=1.1.389",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008", "E741"]

[tool.ruff.lint.isort]
known-first-party = ["fce"]
